# libatasmart

./: README.md  meson.build  meson_options.txt
.github/workflows/: build.yml  codeql.yml
src/atasmart/: atasmart.c  meson.build
tools/strpool/: meson.build
