option('src_build',
  type : 'boolean',
  value : true,
  description : 'Enables building of source.'
)

option('string_pooling',
  type : 'boolean',
  value : true,
  description : 'Enables string pooling.'
)

option('strpool_build',
  type : 'boolean',
  value : true,
  description : 'Enables building of host build tools.'
)

option('strpool_path',
  type : 'string',
  description : 'Path to precompiled strpool allowing for cross compiled library and programs'
)
